# tatami

./: Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
examples/hewton/: .gitignore  Cargo.toml  build.rs
examples/hewton/assets/: hewton.csv
examples/hewton/fonts/: icons.toml
examples/hewton/src/: action.rs  composer.rs  facts.rs  main.rs  queries.rs  scenario.rs  schema.rs  theme.rs  widgets.rs
examples/hewton/src/composer/: axis.rs  dim.rs  filter.rs  level.rs  metric.rs  slicer.rs  top_n.rs
examples/hewton/src/theme/: button.rs  constants.rs  container.rs  text.rs
examples/meridianre-board/: Cargo.toml
examples/meridianre-board/src/: board.rs  composer.rs  infolet.rs  main.rs  server.rs
examples/meridianre-serve/: Cargo.toml
examples/meridianre-serve/src/: cube.rs  lib.rs  main.rs
http/: Cargo.toml
http/src/: error.rs  lib.rs
inmem/: Cargo.toml
inmem/src/: catalogue.rs  lib.rs  resolve.rs
inmem/src/eval/: aggregate.rs  metric.rs  set.rs  tuple.rs
inmem/tests/: hewton_fixture.rs  laws.rs
serve/: Cargo.toml
serve/src/: error.rs  handler.rs  lib.rs
src/: cube.rs  lib.rs  results.rs
src/query/: path.rs  set.rs
src/results/: cell.rs  scalar.rs
src/schema/: builder.rs  error.rs  measure.rs  name.rs  named_set.rs  unit.rs
tatami/: Cargo.toml
tatami-inmem/: Cargo.toml
tatami-inmem/src/: catalogue.rs  eval.rs  lib.rs  resolve.rs
tatami-inmem/src/eval/: aggregate.rs  metric.rs  query.rs  set.rs  tuple.rs
tatami-inmem/tests/: hewton_fixture.rs  laws.rs
tatami/src/: lib.rs  query.rs  results.rs  schema.rs
tatami/src/query/: axes.rs  error.rs  member_ref.rs  options.rs  path.rs  predicate.rs  set.rs  tuple.rs
tatami/src/results/: cell.rs  error.rs  pivot.rs  rollup.rs  series.rs
tatami/src/schema/: builder.rs  dimension.rs  error.rs  format.rs  measure.rs  metric.rs  month_day.rs  name.rs  named_set.rs
tatami/tests/: example_queries.rs
