[package]
name        = "tatami"
description = "Backend-agnostic multidimensional cube trait — types, schema, serde."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
jiff      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[workspace]
members  = ["inmem", "examples/*"]
resolver = "3"

[workspace.package]
version = "0.2.0-dev"
edition = "2024"
license = "MIT"
publish = false

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links  = "deny"
private_intra_doc_links = "deny"
bare_urls               = "warn"

[workspace.dependencies]
# Intra-workspace crates — every member that consumes another tatami crate
# goes through these, not path-relative specs.
tatami       = { path = "." }
tatami-inmem = { path = "inmem" }

# Baseline per MAP §9 — additions to this list need a justification comment.
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
thiserror  = "2"
jiff       = { version = "0.2",  features = ["serde"] }

# tatami-inmem substrate. `polars-core` (the split crate, not the monolith)
# is exactly what inboard stores in `Resource::DataFrame(polars_core::DataFrame)` —
# version-pinned to inboard's 0.51 so the DataFrame type is interoperable.
# Bump deliberately, in lockstep with inboard.
polars-core = { version = "0.51", default-features = false, features = ["serde"] }

# Async runtime for the reference impl and examples.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Example-only — iced 0.15-dev off airstrike/iced's dev branch. Matches
# inboard, sweeten, and fount; the fork has extra text fields (letter_spacing,
# font_features, …) those crates depend on. Switch back to upstream
# iced-rs/iced once those land there.
iced = { git = "https://github.com/airstrike/iced.git", branch = "dev", features = ["tokio"] }

# Match inboard: build deps at high opt-level, own crate at low — fast
# iteration, tolerable runtime. Tatami itself is cheap to compile so the
# delta is mostly in the example.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# iced 0.15-dev ships from git, not crates.io — transitive deps that
# spec `iced_* = "0.15.0-dev"` (fount, sweeten) need to resolve via the
# same source. Pin each sub-crate so cargo doesn't go looking on
# crates.io.
[patch.crates-io]
iced          = { git = "https://github.com/airstrike/iced.git", branch = "dev" }
iced_core     = { git = "https://github.com/airstrike/iced.git", branch = "dev" }
iced_futures  = { git = "https://github.com/airstrike/iced.git", branch = "dev" }
iced_graphics = { git = "https://github.com/airstrike/iced.git", branch = "dev" }
iced_renderer = { git = "https://github.com/airstrike/iced.git", branch = "dev" }
iced_runtime  = { git = "https://github.com/airstrike/iced.git", branch = "dev" }
iced_widget   = { git = "https://github.com/airstrike/iced.git", branch = "dev" }
# cosmic-text fork pairs with airstrike/iced — adds UnderlineStyle,
# OpticalSize, FontVariations, text_decoration on Attrs, etc.
cosmic-text = { git = "https://github.com/airstrike/cosmic-text", branch = "dev" }
