[package]
name        = "tatami-serve"
description = "runway::Module exposing any tatami::Cube over HTTP."
version.workspace      = true
edition.workspace      = true
license.workspace      = true
publish.workspace      = true

[lints]
workspace = true

[dependencies]
tatami     = { workspace = true }
runway     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
tatami-inmem = { workspace = true }
polars-core  = { workspace = true }
# `#[tokio::test]` for the end-to-end cube-error handler test.
tokio        = { workspace = true }
