[package]
name = "tatami"
version = "0.1.0"
edition = "2024"
description = "Backend-agnostic multidimensional cube trait — types, schema, serde."
license = "MIT OR Apache-2.0"
publish = false

[lints.rust]
missing_docs = "warn"

[dependencies]
# Baseline per MAP_PLAN.md §9. No other deps without justification.
serde = { version = "1", features = ["derive"] }
thiserror = "2"
jiff = { version = "0.2", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
