[package]
name        = "tatami"
description = "Backend-agnostic multidimensional cube trait — types, schema, serde."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
serde     = { workspace = true }
thiserror = { workspace = true }
jiff      = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
