[package]
name        = "hewton"
description = "Worked hotel-sales cube — the TARGET API for tatami v0.1."
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

# Exercises the Phase 3 `tatami::Cube` trait and the Phase 4
# `tatami_inmem::InMemoryCube` scaffold (query/members return
# `Error::NotImplemented` until Phase 5).
[dependencies]
tatami       = { workspace = true }
tatami-inmem = { workspace = true }

iced        = { workspace = true }
polars-core = { workspace = true }
tokio       = { workspace = true }

# Hewton-only. polars-io is only here because the example loads facts from
# a CSV on disk; the core tatami/tatami-inmem crates don't parse CSV.
polars-io = { version = "0.51", default-features = false, features = ["csv"] }

# airstrike/fount for Google Fonts loading (Inter). Also hewton-only.
fount = { git = "https://github.com/airstrike/fount.git" }

# airstrike/sweeten — richer widget set on top of iced. Pivot rendering
# uses sweeten::widget::table (closure takes &Row, optional headers,
# sticky-header support) over iced's native table.
sweeten = { git = "https://github.com/airstrike/sweeten", branch = "dev" }
